<resources>
    <string name="app_name" translatable="false">NeWork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="button_new_post">new post</string>
    <string name="button_new_event">new event</string>
    <string name="author_avatar_image">author avatar</string>
    <string name="text_post">Text post</string>
    <string name="image_content">image content</string>
    <string name="button_like">like</string>
    <string name="button_share">share</string>
    <string name="menu_option">menu option</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="name_company">Name company</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="the_user_is_already_registered">The user is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
    <string name="unknown_error">Unknown error</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="user_unregistered">User is unregistered</string>
    <string name="user_not_found">User not found</string>
    <string name="user">user</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="preview">preview</string>
    <string name="remove">remove</string>
    <string name="empty_login">Empty login</string>
    <string name="empty_password">Empty password</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="post">Post</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="event">Event</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="connection_error">Connection error</string>
    <string name="select_date">Select date</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="present_time">PT</string>
    <string name="empty_field">Empty field</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="enter_dates">Enter dates</string>
    <string name="icon_calendar">icon calendar</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_date">End date</string>
    <string name="button_new_job">Button new job</string>
    <string name="whats_is_event">Whats is event?</string>
    <string name="button_add_photo">button add photo</string>
    <string name="button_add_file">button add file</string>
    <string name="button_add_user">button add user</string>
    <string name="button_add_location">button add location</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="date_start">date start</string>
    <string name="dash" translatable="false">-</string>
    <string name="date_finish">date finish</string>
    <string name="create">Create</string>
    <string name="whats_news">Whats news?</string>
    <string name="in_search_work">In search work</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="attachment_15MB"><![CDATA[attachment > 15MB]]></string>
    <string name="remove_photo">Delete photo</string>
    <string name="repeat_password">repeat_password</string>
    <string name="no_jobs">no jobs</string>
    <string name="add_job">add job</string>
    <string name="select_start_date">select_start_date</string>
    <string name="select_dates">select_dates</string>
    <string name="confirm_delete_post">Confirm delete post?</string>
    <string name="post_deleted">Post deleted</string>
    <string name="event_action_success">Event action success</string>
    <string name="confirm_delete_event">Confirm delete event?</string>
    <string name="like_count">%d</string>
    <string name="post_not_found">Post not found</string>
    <string name="participants_count">Participants (%d)</string>
    <string name="event_not_found">Event not found</string>
    <string name="event_type">Event type</string>
    <string name="add_speakers">Add speakers</string>
    <string name="event_created">Event created</string>
    <string name="present">present</string>
    <string name="login_too_short">The login must contain at least 3 characters.</string>
    <string name="password_too_short">The password must contain at least 6 characters.</string>
    <string name="select_event_type_and_date">Select event type and date</string>
    <string name="date_error">Invalid date</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_event">Edit Event</string>
    <string name="post_created">Post created</string>
    <string name="post_updated">Post updated</string>
    <string name="event_updated">Event updated</string>
    <string name="confirm_delete_job">Are you sure you want to delete this job?</string>
    <string name="invalid_link">Invalid link</string>
    <string name="no_app_to_open">No app found to open this link</string>
    <string name="failed_to_open_link">Failed to open link</string>
    <string name="current_job">Currently working here</string>
    <string name="select_users">Select users</string>
    <string name="new_event">New event</string>
    <string name="event_link_hint">Event link</string>
</resources>